--- a/personal.html
+++ b/personal.html
@@ -43,7 +43,7 @@
                                         <li>Music</li>
                                         <ul>
                                             <li>John Williams(conductor)</li>
-                                            <li>Jay Chou</li>
+                                            <li>Chou Chuan-huing</li>
                                             <li>Johann Sebastian Bach</li></ul>
                                         <li>Instruments</li>
                                         <ul>
