--- a/master_dissertation.html
+++ b/master_dissertation.html
@@ -33,7 +33,7 @@
                                 <section>
                                     <header class="main">
                                         <h1>Low-Latency MapReduce</h1>
-                                        <p>Xiaoran Li and Zhiying Wang</p>
+                                        <p>Author:Xiaoran Li Advisor:Zhiying Wang</p>
                                         <p>June 5, 2019</p>
                                     </header>
 
