--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 										<article>
 											<div class="content">
 												<h3>Machine Learning</h3>
-                                                <p>Defense and Attacks: The machine learning package is a great tool to help local network systems find which malicious code should be excluded.</p>
+                                                <p>Network Security: The machine learning package is a great tool to help local network systems find which malicious code should be excluded.</p>
                                                 <p>Image/video Processing: Used pytorch or tensorflow helps the computer to find the characteristics of the sample. The new input will be easy to find what happened next after the sample got trained. </p>
 											</div>
 										</article>
