--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
 										<article>
 											<div class="content">
 												<h3>Distributed File System</h3>
-                                                <p>Used MapReduce Algorithm to create a Local Area Network(LAN) to improve the communication speed. Featured added: Machine Learning, Gradient Coding</p>
+                                                <p>Used MapReduce Algorithm to create a Local Area Network(LAN) to improve the communication speed. Featured is adding: Machine Learning, Gradient Coding, network security, etc.</p>
 											</div>
 										</article>
 										<article>
 											<div class="content">
 												<h3>Machine Learning</h3>
-                                                <p>Network Security: The machine learning package is a great tool to help local network systems find which malicious code should be excluded.</p>
-                                                <p>Image/video Processing: Used pytorch or tensorflow helps the computer to find the characteristics of the sample. The new input will be easy to find what happened next after the sample got trained. </p>
+                                                <p>Network Security(Defense): For every attack need a defense to protect our environment. Using machine learning to find malicious code and excluded to keep the network clean.</p>
+                                                <p>Image/video Processing: Artificial Intelligence to help scientist analysis data such fire prediction is important for the next decade. Using pytorch or tensorflow helps the computer to find the characteristics of the sample. The new input will be easy to find what happened next after the sample got trained. </p>
 											</div>
 										</article>
 										<article>
