--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 										<article>
 											<div class="content">
 												<h3>Distributed File System</h3>
-                                                <p>Used MapReduce Algorithm to create a Local Area Network(LAN) to improve the communication speed. Featured is adding: Machine Learning, Gradient Coding, network security, etc.</p>
+                                                <p>Used MapReduce Algorithm to create a Local Area Network(LAN) to improve the communication speed. Also use the algorithm solved Reverse Index coding which can find the top website links that UC Irvine want to promote. Featured is adding: Machine Learning, Gradient Coding, network security, etc.</p>
 											</div>
 										</article>
 										<article>
@@ -76,7 +76,7 @@
 										<article>
 											<div class="content">
 												<h3>Signal Processing</h3>
-												<p>Wearable devices or other sensors can receive the signal from human and use signal processing can easier to analyze the result</p>
+												<p>Wearable devices or other sensors can receive the signal from human and use fourier transform from signal processing can easier to analyze the result. When analysis multiple inputs can use mahalanobis distance to seperate inputs and get correct result.</p>
 											</div>
 										</article>
 										
