--- a/index.html
+++ b/index.html
@@ -93,10 +93,11 @@
                                         <div class="content">
                                             <h3>University of California, Irvine</h3>
                                             <p>
+					    <li> Electrical Engineering and Computer Sciences class of 2019(M.S.) </li>
                                             <li> Electrical Engineering and Computer Sciences class of 2017(B.S.) </li>
-						    
+					<!--    
                                             <li> Electrical Engineering and Computer Sciences class of 2019(M.S.) </li> 
-						</p>
+						--></p>
                                         </div>
                                     </article>
                                 </div>
