--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 										</article>
 										<article>
 											<div class="content">
-												<h3>Signal Processing</h3>
+												<!--<h3>Signal Processing</h3>-->
 												<p>Wearable devices or other sensors can receive the signal from human and use fourier transform from signal processing can easier to analyze the result. When analysis multiple inputs can use mahalanobis distance to seperate inputs and get correct result.</p>
 											</div>
 										</article>
