--- a/software.html
+++ b/software.html
@@ -84,7 +84,7 @@
                                     <ul>
                                         <li><a href="index.html">Homepage</a></li>
                                         <li><a href="public.html">Publication</a></li>
-                                        <li><a href="course.html">Software</a></li>
+                                        <li><a href="software.html">Software</a></li>
                                         <li><a href="personal.html">Personal</a></li>
                                     </ul>
                                 </nav>
