--- a/master_dissertation.html
+++ b/master_dissertation.html
@@ -75,7 +75,7 @@
                                         <ul>
                                             <li><a href="index.html">Homepage</a></li>
                                             <li><a href="public.html">Publication</a></li>
-                                            <li><a href="course.html">Course Project</a></li>
+                                            <li><a href="software.html">Software</a></li>
                                             <li><a href="personal.html">Personal</a></li>
                                         </ul>
                                     </nav>
