--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										<article>
 											<div class="content">
 												<h3>Machine Learning</h3>
-                                                <p>Neural Network Security(Defense): For every attack need a defense to protect our environment. Using machine learning to find malicious code and excluded to keep the network clean.</p>
+                                                <p>Neural Network Security(Defense): For every attack need a defense to protect our environment. Using machine learning to find malicious code and excluded to keep the network clean. Pseudo random walk is a great tool to design a mix network in order to keep it secure.</p>
                                                 <p>Image/video Processing: Artificial Intelligence to help scientist analysis data such fire prediction is important for the next decade. Using pytorch or tensorflow helps the computer to find the characteristics of the sample. The new input will be easy to find what happened next after the sample got trained. </p>
 											</div>
 										</article>
