--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 									<p>If interest please contact me</p>
 									<ul class="contact">
                                         <li class="icon solid fa-envelope"><a href="#">xiaoral2@uci.edu</a></li>
-					<li class="icon solid fa-envelope"><a href="#">Wechat ID:xiaoran_li524</a></li>
+					<li class="icon solid fas fa-sms"><a href="#">Wechat ID:xiaoran_li524</a></li>
 										<!--<li class="icon solid fa-phone">+1(626) 922-4930</li>
 										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
 										Nashville, TN 00000-0000</li>-->
