--- a/index.html
+++ b/index.html
@@ -25,13 +25,10 @@
 									<a href="index.html" class="logo"><strong>Xiaoran's Personal Website</strong> </a>
 									<ul class="icons">
 										<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>-->
 										<li><a href="https://www.linkedin.com/in/xiaorali/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://www.facebook.com/xiaoran.a.li" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-
+										
 									</ul>
 								</header>
 
@@ -198,7 +195,7 @@
 									<p>If interest please contact me</p>
 									<ul class="contact">
                                         <li class="icon solid fa-envelope"><a href="#">xiaoral2@uci.edu</a></li>
-					<li class="icon solid fas fa-sms"><a href="#">Wechat ID:xiaoran_li524</a></li>
+					<!--li class="icon solid fas fa-sms"><a href="#">Wechat ID:xiaoran_li524</a></li-->
 										<!--<li class="icon solid fa-phone">+1(626) 922-4930</li>
 										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
 										Nashville, TN 00000-0000</li>-->
