--- a/index.html
+++ b/index.html
@@ -9,7 +9,31 @@
 		<title>Xiaoran Li</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+</style>
+		<!-- link rel="stylesheet" href="assets/css/main.css" / -->
 	</head>
 	<body class="is-preload">
 
@@ -28,6 +52,8 @@
 										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>-->
 										<li><a href="https://www.linkedin.com/in/xiaorali/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://www.facebook.com/xiaoran.a.li" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.linkedin.com/in/xiaorali/" class="fa fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://www.facebook.com/xiaoran.a.li" class="fa fa-facebook"><span class="label">Facebook</span></a></li>
 										
 									</ul>
 								</header>
