--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
+<style><!--
+	
 .fa {
   padding: 20px;
   font-size: 30px;
@@ -23,7 +24,7 @@
 .fa:hover {
     opacity: 0.7;
 }
-
+-->
 .fa-facebook {
   background: #3B5998;
   color: white;
