--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<title>Xiaoran Li</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!--link rel="stylesheet" href="assets/css/main.css" /-->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="assets/css/main.css" >
+		<!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"-->
 <style>
 .fa-facebook {
   background: #3B5998;
@@ -37,9 +37,9 @@
 									<a href="index.html" class="logo"><strong>Xiaoran's Personal Website</strong> </a>
 									<ul class="icons">
 										<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>-->
+										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>>
 										<li><a href="https://www.linkedin.com/in/xiaorali/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-										<li><a href="https://www.facebook.com/xiaoran.a.li" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.facebook.com/xiaoran.a.li" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li-->
 										<li><a href="https://www.linkedin.com/in/xiaorali/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://www.facebook.com/xiaoran.a.li" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
 										
