--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" >
-		<!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"-->
-<style>
+		<style>
 .fa-facebook {
   background: #3B5998;
   color: white;
@@ -21,7 +20,6 @@
   color: white;
 }
 </style>
-		<!-- link rel="stylesheet" href="assets/css/main.css" / -->
 	</head>
 	<body class="is-preload">
 
@@ -41,7 +39,7 @@
 										<li><a href="https://www.linkedin.com/in/xiaorali/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://www.facebook.com/xiaoran.a.li" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li-->
 										<li><a href="https://www.linkedin.com/in/xiaorali/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-										<li><a href="https://www.facebook.com/xiaoran.a.li" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.facebook.com/xiaoran.a.li" class="fa fa-facebook"><span class="label">Facebook</span></a></li>
 										
 									</ul>
 								</header>
