--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>>
 										<li><a href="https://www.linkedin.com/in/xiaorali/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://www.facebook.com/xiaoran.a.li" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li-->
-										<li><a href="https://www.linkedin.com/in/xiaorali/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-										<li><a href="https://www.facebook.com/xiaoran.a.li" class="fa fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.linkedin.com/in/xiaorali/" class="icon brands fa fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://www.facebook.com/xiaoran.a.li" class="icon brands fa fa-facebook"><span class="label">Facebook</span></a></li>
 										
 									</ul>
 								</header>
