--- a/master_dissertation.html
+++ b/master_dissertation.html
@@ -34,8 +34,8 @@
                                 <header id="header">
                                     <a href="index.html" class="logo"><strong>Homepage</a>
                                     <ul class="icons">
-                                        <li><a href="https://www.linkedin.com/in/xiaorali/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                                        <li><a href="https://www.facebook.com/xiaoran.a.li" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
+                                        <li><a href="https://www.linkedin.com/in/xiaorali/" class="icon brands fa fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                                        <li><a href="https://www.facebook.com/xiaoran.a.li" class="icon brands fa fa-facebook"><span class="label">Facebook</span></a></li>
                                     </ul>
                                 </header>
 
