--- a/index.html
+++ b/index.html
@@ -10,17 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" >
-		<style>
-.fa-facebook {
-  background: #3B5998;
-  color: white;
-}
-.fa-linkedin {
-  background: #007bb5;
-  color: white;
-}
-</style>
-	</head>
+		</head>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
@@ -39,7 +29,7 @@
 										<li><a href="https://www.linkedin.com/in/xiaorali/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://www.facebook.com/xiaoran.a.li" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li-->
 										<li><a href="https://www.linkedin.com/in/xiaorali/" class="icon brands fa fa-linkedin"><span class="label">LinkedIn</span></a></li>
-										<li><a href="https://www.facebook.com/xiaoran.a.li" class="icon brands fa fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.facebook.com/xiaoran.a.li" class="btn btn-social btn-facebook"><span class="label">Facebook</span></a></li>
 										
 									</ul>
 								</header>
