--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 										<li><a href="https://www.facebook.com/xiaoran.a.li" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li-->
 										<li><a href="https://www.linkedin.com/in/xiaorali/" class="icon brands fa fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://www.facebook.com/xiaoran.a.li" class="btn btn-social-icon btn-facebook"><span class="label">Facebook</span></a></li>
-										
+										<li><a href="https://www.linkedin.com/in/xiaorali/" class="icon brands fa fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://www.facebook.com/xiaoran.a.li" class="btn btn-social-icon btn-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.facebook.com/xiaoran.a.li" class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span></a></li>
 									</ul>
 								</header>
 
