--- a/public.html
+++ b/public.html
@@ -10,16 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-	<style>
-.fa-facebook {
-  background: #3B5998;
-  color: white;
-}
-.fa-linkedin {
-  background: #007bb5;
-  color: white;
-}
-</style>
+	
 	</head>
 	<body class="is-preload">
 
@@ -34,8 +25,8 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Homepage</a>
 									<ul class="icons">
-										<li><a href="https://www.linkedin.com/in/xiaorali/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                                        <li><a href="https://www.facebook.com/xiaoran.a.li" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.linkedin.com/in/xiaorali/" class="icon brands fa fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://www.facebook.com/xiaoran.a.li" class="icon brands fa fa-facebook"><span class="label">Facebook</span></a></li>
 									</ul>
 								</header>
 
