--- a/software.html
+++ b/software.html
@@ -4,6 +4,13 @@
     html5up.net | @ajlkn
     Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+<!-- 
+<video width="320" height="240" controls autoplay>
+  <source src="movie.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+  Your browser does not support the video tag.
+</video>
+-->
 <html>
     <head>
         <title>Xiaoran's Course Work</title>
