--- a/software.html
+++ b/software.html
@@ -42,8 +42,9 @@
                                         <h1>Myself Project</h1>
                                     </header>
 					<hr class="major" />
-					<h2> </h2>
-					
+					<h2> Introduction about my interest projects</h2>
+					<p> I have various of interest started from Robotics design to file system development
+					</p>
 					<hr class="major" />
 					<ul>
                                         <li><a href="course_project.html">Course Project</a></li>
