--- a/software.html
+++ b/software.html
@@ -43,9 +43,12 @@
                                     </header>
 					<hr class="major" />
 					<h2> Introduction about my interest projects</h2>
-					<p> I have various of interest started from Robotics design to file system development
+					<p> I have various of interest started from Robotics Design to File System Development
 					</p>
+					
+					
 					<hr class="major" />
+					<h2> Links to my project pages </h2>
 					<ul>
                                         <li><a href="course_project.html">Course Project</a></li>
                                         <li><a href="personal_project.html">Personal Interest Project</a></li>
