--- a/personal_project.html
+++ b/personal_project.html
@@ -39,9 +39,10 @@
                             <!-- Content -->
                                 <section>
                                     <header class="main">
-                                        <h1>Course Work</h1>
+                                        <h1>Personal Interest Project</h1>
                                     </header>
                                     <!--<hr class="major" />-->
+					<!--
                                     <h2>Deep Learning for Hand-Gesture(<a href="https://github.com/xiaoral2/Deep-Learning-by-Using-MapReduce-"> Code </a>)(<a href="https://github.com/xiaoral2/Deep-Learning-by-Using-MapReduce-/blob/master/274_Group9.pdf"> Report</a>)</h2>
                                     <ul>University of California, Irvine (2019 winter)</ul>
                                     <p> The idea of this project is came from stream game. We expect our hand gesture can be read from computer camera.</p>
@@ -64,9 +65,7 @@
                                     <p>The project came from DSP lab(EECS 152B) worked with two team members. The goal for this class is study the speaker's frequency. The code for C language to control the board for this class can be found in the <a href="https://github.com/jeffrelt/DSP_Lab"> Github</a>.</p>
                                     <p>Describe of the project: Using Matlab to classify three input voices and show the real world that the board can have demonstrated the same result. The project is to find the mahalanobis distance of different input voice. My Matlab can have over 60% of accuracy. Best result for a input voice is 94%. The mother board have similar result as Matlab has.</p>
 									<hr class="major" />
-
-									
-
+					-->
 								</section>
 
 						</div>
