--- a/software.html
+++ b/software.html
@@ -45,6 +45,8 @@
 					<h2> Introduction about my interest projects</h2>
 					<p> I have various of interest started from Robotics Design to File System Development further to 
 						Security System in the File Storage Systems and GPS locality System for Phone tracking  
+						The file system based on the MapReduce framework in local area network(LAN). Based on the 
+						ideal model then develop to other projects for cloud computing.
 					</p>
 					
 					
