--- a/personal.html
+++ b/personal.html
@@ -64,9 +64,10 @@
                                     Programming Language:
                                     <ul>
                                         <li>Python</li>
+					<li>Java</li>
                                         <li>C</li>
                                         <li>Matlab</li>
-                                        <li>SQL</li>
+                                        <li>NoSQL(MongoDB)</li>
                                     </ul>
                                     
                                     Other Skills:
