--- a/course_project.html
+++ b/course_project.html
@@ -39,7 +39,8 @@
                             <!-- Content -->
                                 <section>
                                     <header class="main">
-                                        <h1>Course Work</h1>
+                                        <!--<h1>Course Work</h1> -->
+					<h1><a href="course_project.html">Course Project</a><a href="personal_project.html">Personal Interest Project</a></h1>
                                     </header>
                                     <!--<hr class="major" />-->
                                     <h2>Deep Learning for Hand-Gesture(<a href="https://github.com/xiaoral2/Deep-Learning-by-Using-MapReduce-"> Code </a>)(<a href="https://github.com/xiaoral2/Deep-Learning-by-Using-MapReduce-/blob/master/274_Group9.pdf"> Report</a>)</h2>
