--- a/course_project.html
+++ b/course_project.html
@@ -40,8 +40,8 @@
                                 <section>
                                     <header class="main">
                                         <!--<h1>Course Work</h1> -->
-					<h1><a href="software.html">Project Page</a></h1>(
-						<h2><a href="course_project.html">Course</a>)
+					<h1.5><a href="software.html">Project Page</a></h1.5>
+						<h2>(<a href="course_project.html">Course</a>)
 						(<a href="personal_project.html">Personal</a>)</h2>
                                     </header>
                                     <!--<hr class="major" />-->
