--- a/personal_project.html
+++ b/personal_project.html
@@ -39,7 +39,8 @@
                             <!-- Content -->
                                 <section>
                                     <header class="main">
-                                        <h1>Personal Interest Project</h1>
+                                        <h2><a href="course_project.html">Course</a>
+						<a style="color:blue" href="personal_project.html">Personal</a></h2>
                                     </header>
                                     <!--<hr class="major" />-->
 					<!--
