--- a/course_project.html
+++ b/course_project.html
@@ -40,7 +40,7 @@
                                 <section>
                                     <header class="main">
                                         <!--<h1>Course Work</h1> -->
-						<h2><a style="color:blue" href="course_project.html">Course</a>
+						<h2><a style="color:blue" href="course_project.html">Course</a> /
 						<a href="personal_project.html">Personal</a></h2>
                                     </header>
                                     <!--<hr class="major" />-->
