--- a/software.html
+++ b/software.html
@@ -38,9 +38,10 @@
 
                             <!-- Content -->
                                 <section>
+					<!--
                                     <header class="main">
-                                        <h1>Myself Project</h1>
-                                    </header>
+                                        <h1>Software Projects</h1>
+                                    </header> -->
 					<hr class="major" />
 					<h2> Introduction about my interest projects</h2>
 					<p> I have various of interest started from Robotics Design to File System Development further to 
