--- a/index.html
+++ b/index.html
@@ -150,17 +150,9 @@
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="public.html">Publication</a></li>
-                                        <li><a href="software.html">Software</a></li>
+										<li><a href="working_experience.html">Working Experience</a></li>
+                                        					<li><a href="software.html">Software Project</a></li>
 										<li><a href="personal.html">Personal</a></li>
-										<!--<li>
-											<span class="opener">Personal</span>
-											<ul>
-												<li><a href="#">Hiking</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>-->
 									</ul>
 								</nav>
 
