--- a/course_project.html
+++ b/course_project.html
@@ -93,6 +93,7 @@
                                     <ul>
                                         <li><a href="index.html">Homepage</a></li>
                                         <li><a href="public.html">Publication</a></li>
+					<li><a href="working_experience.html">Working Experience</a></li>
                                         <li><a href="software.html">Software</a></li>
                                         <li><a href="personal.html">Personal</a></li>
                                     </ul>
