--- a/working_experience.html
+++ b/working_experience.html
@@ -40,7 +40,7 @@
 
 									<hr class="major" />
 
-									<h2>Western Digital Intern</h2>
+									<h2>Western Digital(Intern)</h2>
                             <p>June 2018 - Sept. 2019</p>
                             <p>Used profiling skill to find the time cost for each package in eSSD start engine and then optimized the code by
 removing repeated part which improved the start time from 180+ seconds to 150- seconds(C, Python, Java, Bash) </p>
