--- a/working_experience.html
+++ b/working_experience.html
@@ -39,9 +39,10 @@
 									<!--<span class="image main"><img src="images/public.jpg" alt="" /></span>-->
 
 									<hr class="major" />
-
+									<h2>Western Digital(Intern)</h2>
 									<table border="0">
-                   							 <tr><td>Western Digital(Intern) </td><td>June 2018 - Sept. 2019</td></tr>
+                   							 <tr><td>June 2018 - Sept. 2019</td><td>Used profiling skill to find the time cost for each package in eSSD start engine and then optimized the code by
+removing repeated part which improved the start time from 180+ seconds to 150- seconds(C, Python, Java, Bash)</td></tr>
                								</table>
                             <p>Used profiling skill to find the time cost for each package in eSSD start engine and then optimized the code by
 removing repeated part which improved the start time from 180+ seconds to 150- seconds(C, Python, Java, Bash) </p>
