--- a/working_experience.html
+++ b/working_experience.html
@@ -33,7 +33,7 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Working Experience</h1>
+										<h1>Experience</h1>
 									</header>
 
 									<!--<span class="image main"><img src="images/public.jpg" alt="" /></span>-->
