--- a/working_experience.html
+++ b/working_experience.html
@@ -4,6 +4,12 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+<style>
+ul.b {
+  list-style-type: square;
+}
+</style>
+
 <html>
 	<head>
 		<title>Xiaoran's Publication</title>
@@ -45,6 +51,12 @@
                    							 <tr><td></td><td>Used profiling skill to find the time cost for each package in eSSD start engine and then optimized the code by
 removing repeated part which improved the start time from 180+ seconds to 150- seconds(C, Python, Java, Bash)</td></tr>
                								</table>
+									
+									<hr class="b" />					
+                                    					<h2>Western Digital(Intern)</h2>
+									<ul>Advisor: Jerry Lo(June 2018 - Sep.2019)</ul>
+                                    					<li> Used profiling skill to find the time cost for each package in eSSD start engine and then optimized the code by
+removing repeated part which improved the start time from 180+ seconds to 150- seconds(C, Python, Java, Bash) </li>
 									
 									<h2>University of California, Irvine(Grad Research Assistant)</h2>
 									<table border="0">
