--- a/course_project.html
+++ b/course_project.html
@@ -107,8 +107,8 @@
                                     <p>If interest please contact me</p>
                                     <ul class="contact">
                                         <li class="icon solid fa-envelope"><a href="#">xiaoral2@uci.edu</a></li>
-                                        <!--<li class="icon solid fa-phone">+1(626) 922-4930</li>
-                                        <li class="icon solid fa-home">1234 Somewhere Road #8254<br />
+                                        <li class="icon solid fa-phone">+1(626) 922-4930</li>
+                                        <!--<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
                                         Nashville, TN 00000-0000</li>-->
                                     </ul>
                                 </section>
