--- a/master_dissertation.html
+++ b/master_dissertation.html
@@ -76,7 +76,7 @@
                                         <ul>
                                             <li><a href="index.html">Homepage</a></li>
                                             <li><a href="public.html">Publication</a></li>
-					    <li><a href="working_experience.html">Working Experience</a></li>
+					    <li><a href="working_experience.html">Experience</a></li>
                                             <li><a href="software.html">Software</a></li>
                                             <li><a href="personal.html">Personal</a></li>
                                         </ul>
@@ -90,8 +90,8 @@
                                         <p>If interest please contact me</p>
                                         <ul class="contact">
                                             <li class="icon solid fa-envelope"><a href="#">xiaoral2@uci.edu</a></li>
-                                            <!--<li class="icon solid fa-phone">+1(626) 922-4930</li>
-                                            <li class="icon solid fa-home">1234 Somewhere Road #8254<br />
+                                            <li class="icon solid fa-phone">+1(626) 922-4930</li>
+                                            <!--<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
                                             Nashville, TN 00000-0000</li>-->
                                         </ul>
                                     </section>
