--- a/master_dissertation.html
+++ b/master_dissertation.html
@@ -77,7 +77,7 @@
                                             <li><a href="index.html">Homepage</a></li>
                                             <li><a href="public.html">Publication</a></li>
 					    <li><a href="working_experience.html">Experience</a></li>
-                                            <li><a href="software.html">Software</a></li>
+                                            <li><a href="software.html">Software Project</a></li>
                                             <li><a href="personal.html">Personal</a></li>
                                         </ul>
                                     </nav>
