--- a/personal_project.html
+++ b/personal_project.html
@@ -100,7 +100,7 @@ posts within a distance (e.g. 200km)</li>
                                         <li><a href="index.html">Homepage</a></li>
                                         <li><a href="public.html">Publication</a></li>
 					<li><a href="working_experience.html">Experience</a></li>
-                                        <li><a href="software.html">Software</a></li>
+                                        <li><a href="software.html">Software Project</a></li>
                                         <li><a href="personal.html">Personal</a></li>
                                     </ul>
                                 </nav>
