--- a/working_experience.html
+++ b/working_experience.html
@@ -104,7 +104,7 @@ collected data in a cloud data sheet and plot the result by using linear regress
                                             <li><a href="index.html">Homepage</a></li>
                                             <li><a href="public.html">Publication</a></li>
 					    <li><a href="working_experience.html">Experience</a></li>
-                                            <li><a href="software.html">Software</a></li>
+                                            <li><a href="software.html">Software Project</a></li>
                                             <li><a href="personal.html">Personal</a></li>
                                         </ul>
                                     </nav>
