--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 											</h1>
 											<!--<
 											<p>about me <a href="https://github.com/xiaoral2/xiaoral2.github.io/blob/master/images/cv.pdf">CV</a></p>-->
-											<p>about me <a href="https://github.com/xiaoral2/xiaoral2.github.io/blob/master/images/cv.pdf">CV</a><p>
+											<p>about me <a href="images/cv.pdf">CV</a><p>
 											<!--<p>about me <a href="images/cv.pdf">CV</a></p>-->
 										</header>
                                         <p>Xiaoran Li finished his master degree in the Department of Electrical Engineering and Computer Science from UCI in 2019. He enjoys to find the unique solution for all the problem that interest him. He wants to continue his education after got influenced from his research advisors Prof. Wang(UCI), previous research professor Prof. Asimow(Caltech) and Prof. Khine(UCI). 
