--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
 											</div>
 										</article>
 										<article>
+											<div class = "content">
+												<h3> Cryptography in Prio and location privacy </h3>
+												<p>Using the idea of zero-forcing can guarantee the message pass success, but how to protect the location turns out to be a question. Using the idea of Prio to protect the private data of the host is important. Thus, no more public key to allow the geo-location to exposure.</p>
+											</div>
+										</article>
+										<article>
 											<div class="content">
 												<h3>Machine Learning</h3>
                                                 <p>Neural Network Security(Defense): For every attack need a defense to protect our environment. Using machine learning to find malicious code and excluded to keep the network clean. Pseudo random walk is a great tool to design a mix network in order to keep it secure.</p>
