--- a/working_experience.html
+++ b/working_experience.html
@@ -61,7 +61,7 @@ ul.b {
 									<li>Researched and developed new MapReduce shuffling algorithm (pair-index & index-pair), which shortened overall system delay in a distributed cloud storage system.</li>
 									<li>Performed investigative comparison by simulating the industry distributed file system for MapReduce and coded MapReduce in LAN. Tested the coded MapReduce to solve  word count problem for 20GB files and the searching speed was two times faster than the MapReduce</li>
 									<li>Built a web crawler to collect website information from UCI website, and then used both MapReduce and Coded Mapreduce in reverse index coding to find the recommended pages from UCI.</li>
-									
+									<li>Master Dissertation: <a href="master_dissertation.html">Low-Latency MapReduce</a> By Xiaoran Li and Zhiying Wang</li>
 									<hr class="b" />
 									<h2>University of California, Irvine(Undergrad Research Assistant)</h2>
 									<table border="0">
