--- a/working_experience.html
+++ b/working_experience.html
@@ -49,9 +49,15 @@ ul.b {
 									<table border="0">
 									 <tr><td>June 2018 - Sep.2019</td><td> Advisor: Jerry Lo</td></tr>
                								</table>
+									<!--
 									<li> Performance analyzed(profiled) and designed an algorithm to transfer the profile for eSSD to periodic task table to calculate time cost.</li>
 									<li> Optimized eSSD engine to remove bottlenecks and improve performance by 20\% from 180+ seconds under Mint(Linux)(C, Bash).</li>
                                     					<li> Developed and applied a new Cache storage layer to the eSSD and improved response call by 10\% from 2.15 s/call.</li>
+									-->
+									<li>Performance analyzed(profiled) and designed an algorithm to transfer  profile for eSSD to periodic task table to calculate time cost. Reduced about 70\% human labor.</li>
+									<li>Optimized eSSD engine to remove bottlenecks and enhance performance by 20\% from 180+ seconds under Linux</li>
+									<li>Developed and applied a new Cache storage layer to eSSD and improved response call by 10\% from 2.15 s/call.</li>
+									<li>Collaborated with other teams to investigate next generate eSSD data process by create data model.</li>
 									
 									<hr class="b" />
 									<h2>University of California, Irvine(Grad Research Assistant)</h2>
