--- a/working_experience.html
+++ b/working_experience.html
@@ -54,9 +54,9 @@ ul.b {
 									<li> Optimized eSSD engine to remove bottlenecks and improve performance by 20\% from 180+ seconds under Mint(Linux)(C, Bash).</li>
                                     					<li> Developed and applied a new Cache storage layer to the eSSD and improved response call by 10\% from 2.15 s/call.</li>
 									-->
-									<li>Performance analyzed(profiled) and designed an algorithm to transfer  profile for eSSD to periodic task table to calculate time cost. Reduced about 70\% human labor.</li>
-									<li>Optimized eSSD engine to remove bottlenecks and enhance performance by 20\% from 180+ seconds under Linux</li>
-									<li>Developed and applied a new Cache storage layer to eSSD and improved response call by 10\% from 2.15 s/call.</li>
+									<li>Performance analyzed(profiled) and designed an algorithm to transfer  profile for eSSD to periodic task table to calculate time cost. Reduced about 70% human labor.</li>
+									<li>Optimized eSSD engine to remove bottlenecks and enhance performance by 20% from 180+ seconds under Linux</li>
+									<li>Developed and applied a new Cache storage layer to eSSD and improved response call by 10% from 2.15 s/call.</li>
 									<li>Collaborated with other teams to investigate next generate eSSD data process by create data model.</li>
 									
 									<hr class="b" />
@@ -70,7 +70,7 @@ ul.b {
 									-->
 									<li>Master Dissertation: <a href="master_dissertation.html">Low-Latency MapReduce</a> By Xiaoran Li and Zhiying Wang</li>
 									<li>Coded Distributed Computation. Designed algorithm to make deep learning and distributed computation(inner product, convolution) robust, salable and private with code theory under supervision of Prof. Zhiying Wang as graduate research assistant.</li>
-									<li>Low-latency MapReduce. Designed algorithms(pair-index \& index-pair) to shorten overall system delay in shuffling phase for 10\% in a distributed cloud storage system.</li>
+									<li>Low-latency MapReduce. Designed algorithms(pair-index \& index-pair) to shorten overall system delay in shuffling phase for 10% in a distributed cloud storage system.</li>
 									<li>Word Search: Designed algorithm to develop a LAN to simulate enterprise distributed file system with total size of 20GB and find communication cost between each server.</li>
 									<li>Recommendation Search. Designed algorithms to do recommendations based on web crawler collect website information from UCI website, and collected recommendation from UCI domain.</li>
 									<li>Image Search. Designed algorithms to match image from services by building a 11-layer network.</li>
