--- a/personal.html
+++ b/personal.html
@@ -77,6 +77,7 @@
                                         <li>Apache Spark</li>
                                         <li>Tensorflow</li>
                                         <li>Pytorch</li>
+					<li>Kubernetes(k8s)</li>
                                         <li>Latex</li>
                                     </ul>
                                     <hr class="major" />
