--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="public.html">Publication</a></li>
+										<li><a href="public.html">Blogs</a></li>
 										<li><a href="working_experience.html">Experience</a></li>
                                         					<li><a href="software.html">Software Project</a></li>
 										<li><a href="personal.html">Personal</a></li>
@@ -196,7 +196,7 @@
 									</header>
 									<p>If interest please contact me</p>
 									<ul class="contact">
-                                        <li class="icon solid fa-envelope"><a href="#">xiaoral2@uci.edu</a></li>
+                                        <li class="icon solid fa-envelope"><a href="#">xiaoranli0524@gmail.com</a></li>
 					<!--li class="icon solid fas fa-sms"><a href="#">Wechat ID:xiaoran_li524</a></li-->
 										<li class="icon solid fa-phone">+1(626) 922-4930</li>
 										<!--<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
