--- a/personal_project.html
+++ b/personal_project.html
@@ -98,7 +98,7 @@ posts within a distance (e.g. 200km)</li>
                                     </header>
                                     <ul>
                                         <li><a href="index.html">Homepage</a></li>
-                                        <li><a href="public.html">Publication</a></li>
+                                        <li><a href="public.html">Blogs</a></li>
 					<li><a href="working_experience.html">Experience</a></li>
                                         <li><a href="software.html">Software Project</a></li>
                                         <li><a href="personal.html">Personal</a></li>
@@ -112,7 +112,7 @@ posts within a distance (e.g. 200km)</li>
                                     </header>
                                     <p>If interest please contact me</p>
                                     <ul class="contact">
-                                        <li class="icon solid fa-envelope"><a href="#">xiaoral2@uci.edu</a></li>
+                                        <li class="icon solid fa-envelope"><a href="#">xiaoranli0524@gmail.com</a></li>
                                         <li class="icon solid fa-phone">+1(626) 922-4930</li>
                                         <!--<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
                                         Nashville, TN 00000-0000</li>-->
