--- a/public.html
+++ b/public.html
@@ -41,13 +41,13 @@
 									<hr class="b" />
 									<h2><a href="leetCode.html">LeetCode Question & Solution</a></h2>
 									<span class="image object">
-										<img src="images/leetcode.JPG" alt="" />
+										<img src="images/leetcode.jpg" alt="" />
 									</span>
 									
 									<hr class="b" />
 									<h2><a hrf="homeDesign.html">Home Designs & Management</a></h2>
 									<span class="image object">
-										<img src="images/HManagemnt.JPG" alt="" />
+										<img src="images/HManagemnt.jpg" alt="" />
 									</span>
                                     
 								</section>
