--- a/public.html
+++ b/public.html
@@ -41,13 +41,13 @@
 									<hr class="b" />
 									<h2><a href="leetCode.html">LeetCode Question & Solution</a></h2>
 									<span class="image object">
-										<img src="images/leetcode.jpg" alt="" /style="width:256px;height:128px;">
+										<img src="images/leetcode.jpg" alt="" />
 									</span>
 									
 									<hr class="b" />
 									<h2><a hrf="homeDesign.html">Home Designs & Management</a></h2>
 									<span class="image object">
-										<img src="images/HManagemnt.jpg" alt="" / style="width:256px;height:128px;">
+										<img src="images/HManagemnt.jpg" alt="" />
 									</span>
                                     
 								</section>
