--- a/public.html
+++ b/public.html
@@ -39,13 +39,13 @@
 									<!--<span class="image main"><img src="images/public.jpg" alt="" /></span>-->
 									
 									<hr class="b" />
-									<h2><a href="leetCode.html">LeetCode Question & Solution</a></h2>
+									<h2><a href="LeetCode/leetCode.html">LeetCode Question & Solution</a></h2>
 									<span class="image object">
 										<img src="images/leetcode.jpg" alt="" />
 									</span>
 									
 									<hr class="b" />
-									<h2><a hrf="homeDesign.html">Home Designs & Management</a></h2>
+									<h2><a hrf="HomeDesignsManagement/homeDesign.html">Home Designs & Management</a></h2>
 									<span class="image object">
 										<img src="images/HManagemnt.jpg" alt="" />
 									</span>
