--- a/public.html
+++ b/public.html
@@ -39,7 +39,8 @@
 									<!--<span class="image main"><img src="images/public.jpg" alt="" /></span>-->
 									
 									<hr class="b" />
-									<h2><a href="/LeetCode/leetCode.html">LeetCode Question & Solution</a></h2>
+									<h2>LeetCode Question & Solution</h2>
+									<li>In this I will introduce about the data structure and how I approach each questions. If you like please click <a href="/LeetCode/leetCode.html">link</a></li>
 									<span class="image object">
 										<img src="images/leetcode.jpg" alt="" />
 									</span>
