--- a/public.html
+++ b/public.html
@@ -47,6 +47,7 @@
 									
 									<hr class="b" />
 									<h2><a hrf="/HomeDesignsManagement/homeDesign.html">Home Designs & Management</a></h2>
+									<li>In this section I will introduce the product I used which I feel is best with some comparison</li>
 									<span class="image object">
 										<img src="images/HManagemnt.jpg" alt="" />
 									</span>
