--- a/public.html
+++ b/public.html
@@ -46,8 +46,8 @@
 									</span>
 									
 									<hr class="b" />
-									<h2><a hrf="/HomeDesignsManagement/homeDesign.html">Home Designs & Management</a></h2>
-									<li>In this section I will introduce the product I used which I feel is best with some comparison</li>
+									<h2>Home Designs & Management</h2>
+									<li>In this section I will introduce the product I used which I feel is best with some comparison. If you like this kind of thing please go ahead click the <a href="/HomeDesignsManagement/homeDesign.html">link</a> </li>
 									<span class="image object">
 										<img src="images/HManagemnt.jpg" alt="" />
 									</span>
